@@ -2,6 +2,7 @@ svn HEAD
  Enhancements
  * Added list styles for contacts.
  * Allow docs edit task to create folders.
+ * Included workaround for downloading new-version documents
 
  Bugfixes
  * YouTube tasks can retrieve more than 50 results from queries.
